test/invalidImports/b.ts
import {a1, c2} from './a';
import {c1, a2} from "./c";

console.log(a1, c2, c1, a2);

export const b1 = 100;
export const b2 = 1000;
